# Lineup-Berlin

./: .env  .gitattributes  README.md  pyproject.toml
backend/database/: supabase_all_tables_dump.json  supabase_dump_all_tables.py  supabase_example.py
backend/fetcher/: lineup_seed_example.json  ra_artist_check.py  ra_debug.py  ra_scraper.py  ra_tester.py
frontend/: index.html
frontend/components/: navbar.html
frontend/css/: styles.css
frontend/js/: config.js  home.js
my_project.egg-info/: PKG-INFO  SOURCES.txt
raspberry/: main.py
setradar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
