[project]
name = "my_project"
version = "0.1.0"
description = "Short description"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"